@@ -971,9 +971,10 @@ public class KeyMapMaster extends JP1Frame implements ActionListener, PropertyCh
             + preferences.getRDFPath()
             + "</b></p>"
             + "<p>Written primarily by <i>Greg Bush</i> (and now accepting donations "
-            + "at <a href=\"http://sourceforge.net/donate/index.php?user_id=735638\">http://sourceforge.net/donate/index.php?user_id=735638</a>)</p>"
+            + "at <a href=\"http://sourceforge.net/donate/index.php?user_id=735638\">http://sourceforge.net/donate/index.php?user_id=735638</a>), "
+            + "with substantial additions and help from Graham&nbsp;Dixon</p>"
             + "<p>Other contributors include:<blockquote>"
-            + "Graham&nbsp;Dixon, John&nbsp;S&nbsp;Fine, Nils&nbsp;Ekberg, Jon&nbsp;Armstrong, Robert&nbsp;Crowe, "
+            + "John&nbsp;S&nbsp;Fine, Nils&nbsp;Ekberg, Jon&nbsp;Armstrong, Robert&nbsp;Crowe, "
             + "Mark&nbsp;Pauker, Mark&nbsp;Pierson, Mike&nbsp;England</blockquote></html>";
 
         JEditorPane pane = new JEditorPane( "text/html", text );
